fixed private routing , fixed icons, fixed serialization of sections , added flickering loging/ signup form

--- a/src/components/LoginSignup/LoginSignup.module.css
+++ b/src/components/LoginSignup/LoginSignup.module.css
@@ -20,7 +20,6 @@
 
 .login-form {
   margin-top: 5%;
-  font-family: "Poppins", sans-serif;
   height: 450px;
   width: 400px;
   color: #fff;
@@ -72,12 +71,12 @@
   outline: none;
   border: none;
   border-radius: 4px;
-  color: #000000;
-  /* box-shadow: 3px 3px 10px #a1fd63; */
+  color: #585454;
 }
 
 .inputText::placeholder {
   font-size: 18px;
+  color: #585454;
 }
 
 .email-container i,
@@ -105,7 +104,7 @@
 
 .submit-container button:hover {
   color: #a1fd63;
-  background-color: #fff;
+  background-color: #000000;
 }
 
 .switch-wrapper {
